--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,15 @@
 asgiref==3.8.1
+certifi==2024.8.30
+charset-normalizer==3.3.2
 Django==4.2
 django-extensions==3.2.3
 djangorestframework==3.15.2
 djangorestframework-simplejwt==5.3.1
+iamport==0.0.1
+idna==3.10
 pillow==10.4.0
 PyJWT==2.9.0
+requests==2.32.3
 sqlparse==0.5.1
 typing_extensions==4.12.2
+urllib3==2.2.3
