fix: "ALLOWED_HOSTS,DB_HOST UPDATE "
ALLOWED_HOSTS,DB_HOST 배포서버 ip 추가

--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ SECRET_KEY=django-insecure-&nn5bntilde!1d5y$@f0hy3!s0k=c+vd%061ehl896j+-@h%br
 POSTGRES_DB=postgres
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
-POSTGRES_HOST=localhost
+POSTGRES_HOST=54.180.237.27
 POSTGRES_PORT=5432
 
 # Static files
