--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,8 @@ asgiref==3.8.1
 certifi==2024.8.30
 charset-normalizer==3.3.2
 Django==4.2
-django-cors-headers==4.4.0
-django-debug-toolbar==4.4.5
+django-cors-headers
+django-debug-toolbar
 django-environ==0.11.2
 django-extensions==3.2.3
 djangorestframework==3.15.2
