--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,8 @@ asgiref==3.8.1
 certifi==2024.8.30
 charset-normalizer==3.3.2
 Django==4.2
-django-cors-headers
-django-debug-toolbar
+django-cors-headers==4.4.0
+django-debug-toolbar==4.3.0
 django-environ==0.11.2
 django-extensions==3.2.3
 djangorestframework==3.15.2
@@ -13,6 +13,7 @@ idna==3.10
 pillow==10.4.0
 psycopg2-binary==2.9.9
 PyJWT==2.9.0
+python-dotenv==1.0.1
 requests==2.32.3
 sqlparse==0.5.1
 typing_extensions==4.12.2
