--- a/.github/workflows/django-cd.yml
+++ b/.github/workflows/django-cd.yml
@@ -18,6 +18,7 @@ jobs:
           script: |
             cd /home/ubuntu/sulmeulliae
             git pull origin dev
+            pip install -r requirements.txt
             sudo docker-compose up -d --build
             sudo python3 manage.py migrate
             sudo systemctl restart nginx
