--- a/requirements.txt
+++ b/requirements.txt
@@ -2,11 +2,21 @@ annotated-types==0.7.0
 anyio==4.6.0
 asgiref==3.8.1
 asttokens==2.4.1
+async-timeout==4.0.3
+attrs==24.2.0
+autobahn==24.4.2
+Automat==24.8.1
 axios==0.4.0
 black==24.8.0
 certifi==2024.8.30
+cffi==1.17.1
+channels==4.0.0
+channels-redis==4.0.0
 charset-normalizer==3.3.2
 click==8.1.7
+constantly==23.10.4
+cryptography==43.0.1
+daphne==4.0.0
 decorator==5.1.1
 distro==1.9.0
 Django==4.2
@@ -23,8 +33,10 @@ Faker==30.0.0
 h11==0.14.0
 httpcore==1.0.6
 httpx==0.27.2
+hyperlink==21.0.0
 iamport==0.0.1
 idna==3.10
+incremental==24.7.2
 ipython==8.27.0
 jedi==0.19.1
 jiter==0.6.1
@@ -32,6 +44,7 @@ lxml==5.3.0
 markdown-it-py==3.0.0
 matplotlib-inline==0.1.7
 mdurl==0.1.2
+msgpack==1.1.0
 mypy-extensions==1.0.0
 openai==1.51.2
 packaging==24.1
@@ -45,13 +58,19 @@ psycopg2==2.9.9
 psycopg2-binary==2.9.9
 ptyprocess==0.7.0
 pure_eval==0.2.3
+pyasn1==0.6.1
+pyasn1_modules==0.4.1
+pycparser==2.22
 pydantic==2.9.2
 pydantic_core==2.23.4
 Pygments==2.18.0
 PyJWT==2.9.0
+pyOpenSSL==24.2.1
 python-dateutil==2.9.0.post0
+redis==5.0.1
 requests==2.32.3
 rich==13.9.0
+service-identity==24.1.0
 six==1.16.0
 sniffio==1.3.1
 sqlparse==0.5.1
@@ -60,6 +79,9 @@ tomli==2.0.1
 toposort==1.10
 tqdm==4.66.5
 traitlets==5.14.3
+Twisted==24.7.0
+txaio==23.1.1
 typing_extensions==4.12.2
 urllib3==2.2.3
 wcwidth==0.2.13
+zope.interface==7.1.0
