--- a/.github/workflows/django-ci.yml
+++ b/.github/workflows/django-ci.yml
@@ -31,5 +31,6 @@ jobs:
         POSTGRES_PORT: ${{ secrets.POSTGRES_PORT }}
         DJANGO_DEBUG: ${{ secrets.DJANGO_DEBUG }}
         OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+        DEEPL_API_KEY: ${{ secrets.DEEPL_API_KEY }}
       run: |
         python manage.py test
