--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,41 @@
+aioredis==2.0.1
 annotated-types==0.7.0
 anyio==4.6.0
 asgiref==3.8.1
 asttokens==2.4.1
+async-timeout==4.0.3
+attrs==23.2.0
+autobahn==23.6.2
+Automat==22.10.0
 axios==0.4.0
+beautifulsoup4==4.12.3
 black==24.8.0
+boto3==1.34.111
+botocore==1.34.111
+bs4==0.0.2
 certifi==2024.8.30
+cffi==1.16.0
+channels==4.1.0
+channels-redis==4.2.0
 charset-normalizer==3.3.2
 click==8.1.7
+constantly==23.10.4
+cryptography==42.0.7
+daphne==4.1.2
 decorator==5.1.1
 distro==1.9.0
+dj-rest-auth==6.0.0
 Django==4.2
+django-allauth==0.63.3
 django-cors-headers==4.4.0
 django-debug-toolbar==4.3.0
 django-environ==0.11.2
 django-extensions==3.2.3
+django-redis==5.4.0
 django-seed==0.3.1
+django-storages==1.14.3
 djangorestframework==3.15.2
+djangorestframework-jwt==1.11.0
 djangorestframework-simplejwt==5.3.1
 exceptiongroup==1.2.2
 executing==2.1.0
@@ -23,15 +43,19 @@ Faker==30.0.0
 h11==0.14.0
 httpcore==1.0.6
 httpx==0.27.2
+hyperlink==21.0.0
 iamport==0.0.1
 idna==3.10
+incremental==22.10.0
 ipython==8.27.0
 jedi==0.19.1
 jiter==0.6.1
+jmespath==1.0.1
 lxml==5.3.0
 markdown-it-py==3.0.0
 matplotlib-inline==0.1.7
 mdurl==0.1.2
+msgpack==1.0.8
 mypy-extensions==1.0.0
 openai==1.51.2
 packaging==24.1
@@ -41,25 +65,37 @@ pexpect==4.9.0
 pillow==10.4.0
 platformdirs==4.3.6
 prompt_toolkit==3.0.48
-psycopg2==2.9.9
 psycopg2-binary==2.9.9
 ptyprocess==0.7.0
 pure_eval==0.2.3
+pyasn1==0.6.0
+pyasn1_modules==0.4.0
+pycparser==2.22
 pydantic==2.9.2
 pydantic_core==2.23.4
 Pygments==2.18.0
 PyJWT==2.9.0
+pyOpenSSL==24.1.0
 python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+redis==5.0.4
 requests==2.32.3
 rich==13.9.0
+s3transfer==0.10.1
+service-identity==24.1.0
 six==1.16.0
 sniffio==1.3.1
+soupsieve==2.5
 sqlparse==0.5.1
 stack-data==0.6.3
 tomli==2.0.1
 toposort==1.10
 tqdm==4.66.5
 traitlets==5.14.3
+Twisted==24.3.0
+txaio==23.1.1
 typing_extensions==4.12.2
+tzdata==2024.1
 urllib3==2.2.3
 wcwidth==0.2.13
+zope.interface==6.4.post2
