--- a/requirements.txt
+++ b/requirements.txt
@@ -1,154 +1,154 @@
-annotated-types==0.7.0
-anyio==4.6.2
-asgiref==3.8.1
-asttokens==2.4.1
-async-timeout==4.0.3
-attrs==24.2.0
-autobahn==24.4.2
-Automat==24.8.1
-axios==0.4.0
-Babel==2.8.0
-bcrypt==3.2.0
-black==24.8.0
-blinker==1.4
+annotated-types
+anyio
+asgiref
+asttokens
+async-timeout
+attrs
+autobahn
+Automat
+axios
+Babel
+bcrypt
+black
+blinker
 
-cachetools==5.5.0
-certifi==2024.8.30
-cffi==1.17.1
-channels==4.0.0
-channels-redis==4.0.0
-chardet==4.0.0
-charset-normalizer==3.3.2
-click==8.1.7
-colorama==0.4.4
-command-not-found==0.3
-configobj==5.0.6
-constantly==23.10.4
-cryptography==43.0.1
-daphne==4.0.0
-dbus-python==1.2.18
-decorator==5.1.1
-distro==1.9.0
-distro-info==1.1+ubuntu0.2
+cachetools
+certifi
+cffi
+channels
+channels-redis
+chardet
+charset-normalizer
+click
+colorama
+command-not-found
+configobj
+constantly
+cryptography
+daphne
+dbus-python
+decorator
+distro
+distro-info
 Django==4.2
-django-allauth==65.0.2
-django-cors-headers==4.4.0
-django-debug-toolbar==4.3.0
-django-environ==0.11.2
-django-extensions==3.2.3
-django-seed==0.3.1
-djangorestframework==3.15.2
-djangorestframework-simplejwt==5.3.1
-docker==5.0.3
-docker-compose==1.29.2
-dockerpty==0.4.1
-docopt==0.6.2
-ec2-hibinit-agent==1.0.0
-exceptiongroup==1.2.2
-executing==2.1.0
-Faker==30.0.0
-google-api-core==2.21.0
-google-api-python-client==2.149.0
-google-auth==2.35.0
-google-auth-httplib2==0.2.0
-google-auth-oauthlib==1.2.1
-googleapis-common-protos==1.65.0
-gunicorn==20.1.0
-h11==0.14.0
-hibagent==1.0.1
-httpcore==1.0.6
-httplib2==0.22.0
-httpx==0.27.2
-hyperlink==21.0.0
-iamport==0.0.1
-idna==3.10
-importlib-metadata==4.6.4
-incremental==24.7.2
-ipython==8.27.0
-jedi==0.19.1
-jeepney==0.7.1
-Jinja2==3.0.3
-jiter==0.6.1
-jsonpatch==1.32
-jsonpointer==2.0
-jsonschema==3.2.0
-keyring==23.5.0
-launchpadlib==1.10.16
-lazr.restfulclient==0.14.4
-lazr.uri==1.0.6
-lxml==5.3.0
-markdown-it-py==3.0.0
-MarkupSafe==2.0.1
-matplotlib-inline==0.1.7
-mdurl==0.1.2
-more-itertools==8.10.0
-msgpack==1.1.0
-mypy-extensions==1.0.0
-netifaces==0.11.0
-oauthlib==3.2.2
-openai==1.51.2
-packaging==24.1
-parso==0.8.4
-pathspec==0.12.1
-pexpect==4.9.0
-pillow==10.4.0
-platformdirs==4.3.6
-prompt_toolkit==3.0.48
-proto-plus==1.24.0
-protobuf==5.28.2
-psycopg2==2.9.9
-psycopg2-binary==2.9.9
-ptyprocess==0.7.0
-pure_eval==0.2.3
-pyasn1==0.6.1
-pyasn1_modules==0.4.1
-pycparser==2.22
-pydantic==2.9.2
-pydantic_core==2.23.4
-Pygments==2.18.0
-PyGObject==3.42.1
-PyHamcrest==2.0.2
-PyJWT==2.9.0
-pyOpenSSL==24.2.1
-pyparsing==3.2.0
-pyrsistent==0.18.1
-pyserial==3.5
-python-apt==2.4.0+ubuntu4
-python-dateutil==2.9.0.post0
-python-debian==0.1.43+ubuntu1.1
-python-dotenv==1.0.1
-python-magic==0.4.24
-pytz==2022.1
-PyYAML==5.4.1
-redis==5.0.1
-requests==2.32.3
-requests-oauthlib==2.0.0
-rich==13.9.0
-rsa==4.9
-SecretStorage==3.3.1
-service-identity==24.1.0
-six==1.16.0
-sniffio==1.3.1
-sos==4.5.6
-sqlparse==0.5.1
-ssh-import-id==5.11
-stack-data==0.6.3
-systemd-python==234
-texttable==1.6.4
-tomli==2.0.1
-toposort==1.10
-tqdm==4.66.5
-traitlets==5.14.3
-Twisted==24.7.0
-txaio==23.1.1
-typing_extensions==4.12.2
-ubuntu-pro-client==8001
-ufw==0.36.1
-unattended-upgrades==0.1
-uritemplate==4.1.1
-urllib3==2.2.3
-wadllib==1.3.6
-wcwidth==0.2.13
-websocket-client==1.2.3
-zipp==1.0.0
-zope.interface==7.1.0
+django-allauth
+django-cors-headers
+django-debug-toolbar
+django-environ
+django-extensions
+django-seed
+djangorestframework
+djangorestframework-simplejwt
+docker
+docker-compose
+dockerpty
+docopt
+ec2-hibinit-agent
+exceptiongroup
+executing
+Faker
+google-api-core
+google-api-python-client
+google-auth
+google-auth-httplib2
+google-auth-oauthlib
+googleapis-common-protos
+gunicorn
+h11
+hibagent
+httpcore
+httplib2
+httpx
+hyperlink
+iamport
+idna
+importlib-metadata
+incremental
+ipython
+jedi
+jeepney
+Jinja2
+jiter
+jsonpatch
+jsonpointer
+jsonschema
+keyring
+launchpadlib
+lazr.restfulclient
+lazr.uri
+lxml
+markdown-it-py
+MarkupSafe
+matplotlib-inline
+mdurl
+more-itertools
+msgpack
+mypy-extensions
+netifaces
+oauthlib
+openai
+packaging
+parso
+pathspec
+pexpect
+pillow
+platformdirs
+prompt_toolkit
+proto-plus
+protobuf
+psycopg2
+psycopg2-binary
+ptyprocess
+pure_eval
+pyasn1
+pyasn1_modules
+pycparser
+pydantic
+pydantic_core
+Pygments
+PyGObject
+PyHamcrest
+PyJWT
+pyOpenSSL
+pyparsing
+pyrsistent
+pyserial
+python-apt
+python-dateutil
+python-debian
+python-dotenv
+python-magic
+pytz
+PyYAML
+redis
+requests
+requests-oauthlib
+rich
+rsa
+SecretStorage
+service-identity
+six
+sniffio
+sos
+sqlparse
+ssh-import-id
+stack-data
+systemd-python
+texttable
+tomli
+toposort
+tqdm
+traitlets
+Twisted
+txaio
+typing_extensions
+ubuntu-pro-client
+ufw
+unattended-upgrades
+uritemplate
+urllib3
+wadllib
+wcwidth
+websocket-client
+zipp
+zope.interface
